crates/backyard-lexer/tests/snapshots/lexer__at.snap
---
source: crates/backyard-lexer/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
- token_type: Variable
  value:
    - 97
  line: 1
  column: 0
  offset: 0
- token_type: Assignment
  value:
    - 61
  line: 1
  column: 3
  offset: 3
- token_type: AtSign
  value:
    - 64
  line: 1
  column: 5
  offset: 5
- token_type: This
  value:
    - 116
    - 104
    - 105
    - 115
  line: 1
  column: 6
  offset: 6
- token_type: LeftParenthesis
  value:
    - 40
  line: 1
  column: 11
  offset: 11
- token_type: RightParenthesis
  value:
    - 41
  line: 1
  column: 12
  offset: 12
- token_type: Semicolon
  value:
    - 59
  line: 1
  column: 13
  offset: 13
