crates/backyard-lexer/tests/snapshots/lexer__backslash.snap
---
source: crates/backyard-lexer/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
- token_type: Name
  value:
    - 92
    - 65
    - 92
    - 66
  line: 1
  column: 0
  offset: 0
- token_type: Semicolon
  value:
    - 59
  line: 1
  column: 4
  offset: 4
