crates/backyard-lexer/tests/snapshots/lexer__colon.snap
---
source: crates/backyard-lexer/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
- token_type: Variable
  value: a
  line: 1
  column: 0
  offset: 0
- token_type: Assignment
  value: "="
  line: 1
  column: 3
  offset: 3
- token_type: Variable
  value: b
  line: 1
  column: 5
  offset: 5
- token_type: DoubleColon
  value: "::"
  line: 1
  column: 7
  offset: 7
- token_type: Identifier
  value: c
  line: 1
  column: 9
  offset: 9
- token_type: QuestionMark
  value: "?"
  line: 1
  column: 11
  offset: 11
- token_type: Variable
  value: d
  line: 1
  column: 13
  offset: 13
- token_type: Colon
  value: ":"
  line: 1
  column: 16
  offset: 16
- token_type: Variable
  value: e
  line: 1
  column: 18
  offset: 18
- token_type: Semicolon
  value: ;
  line: 1
  column: 20
  offset: 20
