crates/backyard-lexer/tests/snapshots/lexer__equal.snap
---
source: crates/backyard-lexer/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
- token_type: Variable
  value:
    - 97
  line: 1
  column: 0
  offset: 0
- token_type: ReferenceAssignment
  value:
    - 61
    - 38
  line: 1
  column: 3
  offset: 3
- token_type: Variable
  value:
    - 98
  line: 1
  column: 6
  offset: 6
- token_type: Assignment
  value:
    - 61
  line: 1
  column: 9
  offset: 9
- token_type: Variable
  value:
    - 99
  line: 1
  column: 11
  offset: 11
- token_type: IsIdentical
  value:
    - 61
    - 61
    - 61
  line: 1
  column: 14
  offset: 14
- token_type: Variable
  value:
    - 100
  line: 1
  column: 18
  offset: 18
- token_type: IsEqual
  value:
    - 61
    - 61
  line: 1
  column: 21
  offset: 21
- token_type: LeftParenthesis
  value:
    - 40
  line: 1
  column: 24
  offset: 24
- token_type: Fn
  value:
    - 102
    - 110
  line: 1
  column: 25
  offset: 25
- token_type: LeftParenthesis
  value:
    - 40
  line: 1
  column: 27
  offset: 27
- token_type: RightParenthesis
  value:
    - 41
  line: 1
  column: 28
  offset: 28
- token_type: Arrow
  value:
    - 61
    - 62
  line: 1
  column: 30
  offset: 30
- token_type: Variable
  value:
    - 100
  line: 1
  column: 33
  offset: 33
- token_type: RightParenthesis
  value:
    - 41
  line: 1
  column: 35
  offset: 35
- token_type: LeftParenthesis
  value:
    - 40
  line: 1
  column: 36
  offset: 36
- token_type: RightParenthesis
  value:
    - 41
  line: 1
  column: 37
  offset: 37
- token_type: Semicolon
  value:
    - 59
  line: 1
  column: 38
  offset: 38
