crates/backyard-lexer/tests/snapshots/lexer__exclamation.snap
---
source: crates/backyard-lexer/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
- token_type: Variable
  value: a
  line: 1
  column: 0
  offset: 0
- token_type: Assignment
  value: "="
  line: 1
  column: 3
  offset: 3
- token_type: Variable
  value: b
  line: 1
  column: 5
  offset: 5
- token_type: IsNotIdentical
  value: "!=="
  line: 1
  column: 8
  offset: 8
- token_type: Variable
  value: c
  line: 1
  column: 12
  offset: 12
- token_type: IsNotEqual
  value: "!="
  line: 1
  column: 15
  offset: 15
- token_type: BooleanNegate
  value: "!"
  line: 1
  column: 18
  offset: 18
- token_type: BooleanNegate
  value: "!"
  line: 1
  column: 20
  offset: 19
- token_type: Variable
  value: d
  line: 1
  column: 21
  offset: 20
- token_type: Semicolon
  value: ;
  line: 1
  column: 23
  offset: 22
