crates/backyard-lexer/tests/snapshots/lexer__halt.snap
---
source: crates/backyard-lexer/tests/lexer.rs
assertion_line: 203
expression: tokens
snapshot_kind: text
---
- token_type: Variable
  value:
    - 97
  line: 1
  column: 0
  offset: 0
- token_type: Assignment
  value:
    - 61
  line: 1
  column: 3
  offset: 3
- token_type: "False"
  value:
    - 102
    - 97
    - 108
    - 115
    - 101
  line: 1
  column: 5
  offset: 5
- token_type: Semicolon
  value:
    - 59
  line: 1
  column: 10
  offset: 10
- token_type: HaltCompiler
  value:
    - 95
    - 95
    - 104
    - 97
    - 108
    - 116
    - 95
    - 99
    - 111
    - 109
    - 112
    - 105
    - 108
    - 101
    - 114
  line: 2
  column: 0
  offset: 12
